[package]
name = "highlights"
version = "0.3.0"
edition = "2021"
description = "Convert kindle highlights into different formats"
license-file = "LICENSE.txt"
keywords = ["productivity", "kindle"]
repository = "https://github.com/dimasmith/highlights"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4.0.8", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.1"
